# berel

./: .berel.yml  README.md  build.sh  install.vala.in  main.vala  meson.build
resources/: berel.yml
src/: install.vala  main.vala  meson.build
src/Pluie/: Berel.App.vala  Berel.Comment.vala  Berel.Extension.vala  Berel.HeaderDef.vala  Berel.Key.vala  Berel.Keys.vala  Berel.Meta.vala  Berel.Sepline.vala
